# retrogame

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.cbp
config/: main.cfg
level/: gameObjects.lua  level01.lua  level02.lua  level03.lua  main.lua  player.lua  room.lua  test.txt
source/: main.cpp
source/allegro/: game.cpp  game.h  graphics.cpp  graphics.h
source/app/: main.cpp
source/components/: component.cpp  component.h
source/core/: component.cpp  component.h  game.cpp  game.h  gameobject.cpp  gameobject.h  graphics.h  input.cpp  input.h  vector2.h
source/game/: player.cpp  player.h  tilemap.cpp  tilemap.h  world.cpp  world.h
